k8s/order-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-worker
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-worker
  template:
    metadata:
      labels:
        app: order-worker
    spec:
      containers:
        - name: order-worker
          image: order-worker:v1
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"
            limits:
              cpu: "500m"
              memory: "384Mi"
          readinessProbe:
            exec:
              command:
                - celery
                - -A
                - order_worker
                - inspect
                - ping
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 10
          livenessProbe:
            exec:
              command:
                - celery
                - -A
                - order_worker
                - inspect
                - ping
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
