k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-api-ingress
  namespace: ecommerce
spec:
  ingressClassName: nginx
  rules:
    - host: sonu.local
      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-api-service
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: order-api-service
                port:
                  number: 8000
